--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,17 +5,18 @@ permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap"> <sup>#</sup> corresponding author; \* equal contribution .</div>
-{% endif %}
+<div class="wordwrap"> <sup>#</sup> corresponding author; \* equal contribution .</div>
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
+
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
+
+    {% assign sorted_posts = site.publications | map: "order" | default: 0 | sort: "order" | reverse %}
+
+    {% for post in sorted_posts %}
       {% if post.category != category[0] %}
         {% continue %}
       {% endif %}
