--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,7 +14,7 @@ author_profile: true
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
 
-    {% assign sorted_posts = site.publications | map: "order" | default: 0 | sort: "order" | reverse %}
+    {% assign sorted_posts = site.publications | map: "order" | default: 0 | sort: "order"%}
 
     {% for post in sorted_posts %}
       {% if post.category != category[0] %}
