--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,7 +9,7 @@ author_profile: true
 
 <div class="publications-page">
   <div class="publications-page__content">
-    <div class="wordwrap"> <sup>#</sup> corresponding author; \* equal contribution .</div>
+    <div class="wordwrap"> <sup>#</sup> corresponding author; * equal contribution.</div>
 
     <!-- New style rendering if publication categories are defined -->
     {% if site.publication_category %}
